@@ -1,3 +1,8 @@
+2013-12-20  Marcus Müller <znek@mulle-kybernetik.com>
+
+	* Headers/Foundation/NSStream.h: OSX compatibilityy ... use formal
+	protocol if possible (bug #40925).
+
 2013-12-13  Fred Kiefer <FredKiefer@gmx.de>
 
 	* Headers/Foundation/NSArray.h,
